--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,13 @@ authors = [
 ]
 license = {text = "Apache License 2.0"}
 readme = "README.md"
-requires-python = ">3.12"
+requires-python = ">3.12,<4.0"
 dependencies = [
     "langchain-core (>=0.3.49,<0.4.0)",
     "python-dotenv (>=1.1.0,<2.0.0)",
     "langchain-openai (>=0.3.11,<0.4.0)",
-    "googlemaps (>=4.10.0,<5.0.0)"
+    "googlemaps (>=4.10.0,<5.0.0)",
+    "folium (>=0.19.5,<0.20.0)"
 ]
 
 
